Upadate code